# perfect_bloomfilter

./: .gitignore  Cargo.toml  LICENSE  README.md  bs  bs2  false_positive_blooms.txt  false_positives.txt  shell.nix
.cargo/: config.toml
src/: config.rs  filter.rs  hash.rs  init.rs  inner_filters.rs  internals.rs  io.rs  lib.rs  main.rs  metadata.rs  old_files.rs  old_files_v1.rs  outer_filters.rs  perfect_bloom.rs  rehash.rs  shard_vec.rs  test.rs  utils.rs
src/bloom/: hash.rs  init.rs  inner_filters.rs  io.rs  mod.rs  outer_filters.rs  rehash.rs  utils.rs
src/metadata/: meta.rs
src/perfect_bloomfilter/: async.rs  mod.rs  sync.rs
tests/: async_test.rs  sync_test.rs
