[package]
name = "perfect_bloomfilter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arc-swap = "1.7.1"
bitvec = "1.0.1"
murmur3 = "0.5.2"
once_cell = "1.21.3"
rusqlite = "0.37.0"
threadpool = "1.8.1"
tokio = { version = "1.47.1", features = ["macros", "rt", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
