[package]
name = "perfect_bloomfilter"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
bitvec = "1.0.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
tempfile = "3.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3"]


